# AbraLang

./: Cargo.toml  README.md  build.rs  main.abra  main.abx  o.abx  o.json  parser.lalrpop  parser.rs
src/: ast.rs  bytecode.rs  bytecode_machine.rs  compiler.rs  lib.rs  main.rs  object.rs  parser.rs  test.rs  token.rs  token_to_ast.rs  tokenizer.rs  typedata.rs  value.rs
src/cli/: mod.rs
src/compiler/: bytecode.rs  compile.rs  mod.rs  typecheck.rs
src/frontend/: ast.rs  mod.rs  parser.rs  tokenizer.rs
src/optimizer/: mod.rs
src/runtime/: inbuilt.rs  mod.rs  object.rs  types.rs  value.rs  vm.rs
tests/: class.abra  eq.abra  fail.abra  fn_call.abra  for_loop.abra  if_branch1.abra  if_branch2.abra  if_false.abra  if_true.abra  neq.abra  var_decl.abra  var_drop.abra
