[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bincode = "=1.3.3"
clap = {version = "4.5.27", features =["cargo","derive"]}
paste = "1.0.15"
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.22.1"
