[package]
name = "abra_lang" # Or your actual package name
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "abra" # The command-line executable name
path = "src/main.rs"

[lib]
name = "abra_lang" # The library name
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3" # Or newer compatible version
clap = { version = "4.4", features = ["derive","cargo"] } # Or newer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Add other dependencies if needed
lalrpop = "0.22.1"
paste = "1.0.15"
ordered-float = { version = "5.0.0", features = ["serde"] }
# Add if you want both a library and a binary
# [[bin]]
# name = "abra" # The command-line executable name
# path = "src/main.rs"

# [lib]
# name = "abra_lang" # The library name
# path = "src/lib.rs"
